index adding fingerprint

--- a/hello/platforms/android/app/src/main/res/xml/config.xml
+++ b/hello/platforms/android/app/src/main/res/xml/config.xml
@@ -21,4 +21,5 @@
     <allow-intent href="geo:*" />
     <allow-intent href="market:*" />
     <preference name="loglevel" value="DEBUG" />
+    <preference name="UseSwiftLanguage" value="4.0" />
 </widget>
